@@ -1,8 +1,9 @@
 import hashlib
 import pytest
 import py
+from devpi_server.log import thread_pop_log
+from devpi_server.keyfs import load
 from devpi_server.replica import *  # noqa
-from devpi_common.url import URL
 
 def loads(bytestring):
     return load(py.io.BytesIO(bytestring))
@@ -315,7 +316,7 @@ class TestTweenReplica:
         assert 'foo' not in response.headers
         assert 'keep-alive' not in response.headers
 
-def replay(xom, replica_xom):
+def replay(xom, replica_xom, events=True):
     threadlog.info("test: replaying replica")
     for serial in range(replica_xom.keyfs.get_next_serial(),
                         xom.keyfs.get_next_serial()):
@@ -324,6 +325,18 @@ def replay(xom, replica_xom):
         change_entry = xom.keyfs._fs.get_changes(serial)
         threadlog.info("test: importing to replica %s", serial)
         replica_xom.keyfs.import_changes(serial, change_entry)
+
+    # replay notifications
+    if events:
+        noti_thread = replica_xom.keyfs.notifier
+        event_serial = noti_thread.read_event_serial()
+        thread_push_log("NOTI")
+        while event_serial < replica_xom.keyfs.get_current_serial():
+            event_serial += 1
+            noti_thread._execute_hooks(event_serial, threadlog, raising=True)
+            noti_thread.write_event_serial(event_serial)
+        thread_pop_log("NOTI")
+
 
 class TestFileReplication:
     @pytest.fixture
@@ -527,7 +540,27 @@ def test_should_fetch_remote_file():
            should_fetch_remote_file(Entry(), {H_REPLICA_FILEREPL: str("YES")})
 
 
-def test_get_simplelinks_perstage(httpget, monkeypatch, pypistage, pypireplicastage, pypiurls, replica_xom, xom):
+def test_simplelinks_update_updates_projectname(httpget, monkeypatch,
+    pypistage, replica_pypistage, pypiurls, replica_xom, xom):
+
+    pypistage.mock_simple_projects([])
+    pypistage.mock_simple("pytest", pkgver="pytest-1.0.zip")
+    with xom.keyfs.transaction():
+        assert not pypistage.list_projects_perstage()
+
+    with xom.keyfs.transaction():
+        pypistage.get_simplelinks("pytest")
+
+    # replicate including executing events
+    replay(xom, replica_xom)
+
+    with replica_xom.keyfs.transaction():
+        st = replica_xom.model.getstage(pypistage.name)
+        assert st.list_projects_perstage() == set(["pytest"])
+
+
+def test_get_simplelinks_perstage(httpget, monkeypatch, pypistage, replica_pypistage,
+                                  pypiurls, replica_xom, xom):
     orig_simple = pypiurls.simple
 
     # prepare the data on master
@@ -546,14 +579,14 @@ def test_get_simplelinks_perstage(httpget, monkeypatch, pypistage, pypireplicast
         text='<a href="https://pypi.python.org/pkg/pytest-1.0.zip">pytest-1.0.zip</a>',
         headers={'X-DEVPI-SERIAL': str(serial)})
     with replica_xom.keyfs.transaction():
-        ret = pypireplicastage.get_releaselinks("pytest")
+        ret = replica_pypistage.get_releaselinks("pytest")
     assert len(ret) == 1
     assert ret[0].relpath == 'root/pypi/+e/https_pypi.python.org_pkg/pytest-1.0.zip'
 
     # now we change the links and expire the cache
     pypiurls.simple = orig_simple
     pypistage.mock_simple("pytest", pkgver="pytest-1.1.zip", pypiserial=10001)
-    pypistage.set_updated_at('pytest', time.time() - 3600)
+    pypistage.set_updated_at('pytest', 0)
     with xom.keyfs.transaction(write=True):
         pypistage.get_releaselinks("pytest")
     assert xom.keyfs.get_current_serial() > serial
@@ -564,8 +597,9 @@ def test_get_simplelinks_perstage(httpget, monkeypatch, pypistage, pypireplicast
         called.append(True)
         assert xom.keyfs.get_current_serial() == serial
         assert replica_xom.keyfs.get_current_serial() < serial
-        replay(xom, replica_xom)
+        replay(xom, replica_xom, events=False)
         assert replica_xom.keyfs.get_current_serial() == serial
+
     monkeypatch.setattr(replica_xom.keyfs.notifier, 'wait_tx_serial', wait_tx_serial)
     pypiurls.simple = 'http://localhost:3111/root/pypi/+simple/'
     httpget.mock_simple(
@@ -577,8 +611,8 @@ def test_get_simplelinks_perstage(httpget, monkeypatch, pypistage, pypireplicast
         # make the replica believe it hasn't updated for a longer time
         r_pypistage = replica_xom.model.getstage("root/pypi")
         r_pypistage.set_updated_at("pytest", time.time() - (r_pypistage.cache_expiry + 1))
-        ret = pypireplicastage.get_releaselinks("pytest")
+        ret = replica_pypistage.get_releaselinks("pytest")
     assert called == [True]
+    replay(xom, replica_xom)
     assert len(ret) == 1
     assert ret[0].relpath == 'root/pypi/+e/https_pypi.python.org_pkg/pytest-1.1.zip'
-
