@@ -13,6 +13,13 @@
 
 - use "project" variable naming consistently in APIs
 
+- drop calling of devpi_pypi_initial hook in favor of
+  the new "devpi_mirror_initialnames(stage, projectnames)" hook
+  which is called when a mirror is initialized.
+
+- simplify and unify internal mirroring code some more
+  with "normal" stage handling.
+
 2.5.3 (2015-11-23)
 ------------------
 
